--- a/support.html
+++ b/support.html
@@ -1293,7 +1293,7 @@ table td + td {
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="help.html" style="padding: 10px 15px;">Помощ</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://invite.scorpion-bot.com/" style="padding: 10px 15px;">Покани Ме</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://invite.scorpion-bot.com/" style="padding: 10px 15px;">Покани Ме</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="support.html" style="padding: 10px 15px;">Съпорт</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="stats.html" style="padding: 10px 15px;">Статистика</a>
 </li></ul>
