--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 		"logo": "images/e90e9bc8cfd29fb746634f7b96f121e0.png",
 		"sameAs": []
 }</script>
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Начало">
-    <meta property="og:description" content="">
+    <meta name="theme-color" content="#ff0000">
+    <meta property="og:title" content="Scorpion Bot - Начало">
+    <meta property="og:description" content="Имам всичко от което се нуждаете!!">
     <meta property="og:type" content="website">
+    <meta data-react-helmet="true" property="og:image" content="https://i.imgur.com/6OoQ6hL.png%22%3E <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body data-home-page="Начало.html" data-home-page-title="Начало" class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-05e9"><div class="u-clearfix u-sheet u-valign-middle-xl">
         <a href="https://scorpion-bot.com/" class="u-image u-logo u-image-1" data-image-width="1024" data-image-height="1024">
