--- a/stats.html
+++ b/stats.html
@@ -24,10 +24,12 @@
 		"logo": "images/e90e9bc8cfd29fb746634f7b96f121e0.png",
 		"sameAs": []
 }</script>
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="stats">
-    <meta property="og:description" content="">
+    <meta name="theme-color" content="#ff0000">
+    <meta property="og:title" content="Scorpion Bot - Статистика">
+    <meta property="og:description" content="Имам всичко от което се нуждаете!!">
+    <meta property="og:footer" content="© Scorpion Bot (+) | Всички Права Запазени - 2021 г.">
     <meta property="og:type" content="website">
+    <meta data-react-helmet="true" property="og:image" content="https://i.imgur.com/6OoQ6hL.png%22%3E <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-05e9"><div class="u-clearfix u-sheet u-valign-middle-xl">
         <a href="https://scorpion-bot.com" class="u-image u-logo u-image-1" data-image-width="1024" data-image-height="1024" title="Презареди Сайта">
