--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>404</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="scorpion.css" media="screen">
 <link rel="stylesheet" href="404.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="scorpion.js" defer=""></script>
