--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Scorpion Bot - Помощ</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="scorpion.css" media="screen">
 <link rel="stylesheet" href="help.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="scorpion.js" defer=""></script>
