--- a/404.html
+++ b/404.html
@@ -17,9 +17,9 @@
     
     
     <script type="application/ld+json">{
-		"@context": "http://schema.org",
+		"@context": "https://scorpion-bot.com",
 		"@type": "Organization",
-		"name": "Site1",
+		"name": "Scorpion Bot - 404",
 		"logo": "images/e90e9bc8cfd29fb746634f7b96f121e0.png"
 }</script>
     <meta name="theme-color" content="#ff0000">
