--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script type="application/ld+json">{
 		"@context": "https://scorpion-bot.com",
 		"@type": "Organization",
-		"name": "Scorpion Bot",
+		"name": "Scorpion Bot - Home",
 		"logo": "images/e90e9bc8cfd29fb746634f7b96f121e0.png",
 		"sameAs": []
 }</script>
