--- a/help.html
+++ b/help.html
@@ -18,9 +18,9 @@
     
     
     <script type="application/ld+json">{
-		"@context": "http://schema.org",
+		"@context": "https://scorpion-bot.com",
 		"@type": "Organization",
-		"name": "Site1",
+		"name": "Scorpion Bot - Help",
 		"logo": "images/e90e9bc8cfd29fb746634f7b96f121e0.png",
 		"sameAs": []
 }</script>
