--- a/support.html
+++ b/support.html
@@ -1238,9 +1238,9 @@ table td + td {
       }
     /* Injected CSS Code */ </style>
     <script type="application/ld+json">{
-		"@context": "http://schema.org",
+		"@context": "https://scorpion-bot.com",
 		"@type": "Organization",
-		"name": "Site1",
+		"name": "Scorpion Bot - Support",
 		"logo": "images/e90e9bc8cfd29fb746634f7b96f121e0.png",
 		"sameAs": []
 }</script>
