--- a/help.html
+++ b/help.html
@@ -29,6 +29,31 @@
     <meta property="og:description" content="Имам всичко от което се нуждаете!!">
     <meta property="og:type" content="website">
     <meta data-react-helmet="true" property="og:image" content="https://i.imgur.com/6OoQ6hL.png%22%3E <meta name="twitter:card" content="summary_large_image" />
+    </head>
+  <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ff0000; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #000; 
+}
+</style>   
   </head>
   <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-05e9"><div class="u-clearfix u-sheet u-valign-middle-xl">
         <a href="https://scorpion-bot.com/" class="u-image u-logo u-image-1" data-image-width="1024" data-image-height="1024">
