--- a/404.html
+++ b/404.html
@@ -75,5 +75,51 @@
         </p>
       </div></footer>
     </section>
-  </body>
+    <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>  
+    <div id="contextMenu" class="context-menu" style="display: none"> 
+        <ul class="menu"> 
+            <li class="share"><a href="#"><i class="fa fa-share" aria-hidden="true"></i> Сподели</a></li> 
+            <li class="rename"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Начало</a></li> 
+            <li class="link"><a href="help"><i class="fa fa-life-bouy" aria-hidden="true"></i> Помощ</a></li> 
+            <li class="download"><a href="http://invite.scorpion-bot.com"><i class="fa fa-plus-circle" aria-hidden="true"></i> Покана</a></li> 
+            <li class="paste"><a href="stats"><i class="fa fa-heartbeat" aria-hidden="true"></i> Статистика</a></li> 
+            <li class="download"><a href="https://dash.scorpion-bot.com/"><i class="fa fa-sign-in" aria-hidden="true"></i> Вход</a></li> 
+            <li class="trash"><a href="#"><i class="fa fa-trash" aria-hidden="true"></i> Затвори</a></li>
+        </ul> 
+    </div> 
+
+    <script>
+       document.onclick = hideMenu; 
+       document.oncontextmenu = rightClick; 
+
+        function hideMenu() { 
+            document.getElementById("contextMenu") 
+                    .style.display = "none" 
+        } 
+
+        function rightClick(e) { 
+            e.preventDefault(); 
+
+            if (document.getElementById("contextMenu") .style.display == "block"){ 
+                hideMenu(); 
+            }else{ 
+                var menu = document.getElementById("contextMenu")      
+                menu.style.display = 'block'; 
+                menu.style.left = e.pageX + "px"; 
+                menu.style.top = e.pageY + "px"; 
+            } 
+        } 
+    </script>
+  </body>					      
 </html>
+
