--- a/404.html
+++ b/404.html
@@ -96,6 +96,7 @@
 </g></svg><img></span>&nbsp;ПОМОЩ
           </a>
         </p>
+	<p class="u-align-left u-text u-text-5">Аз съм нов дискорд бот разработен от R4#1111 и напълно преведен на български език с мен ще можете да модерирате , персонализирате вашият дискорд сървър и още много.</p>
       </div></footer>
     </section>
     <html lang="en">
