--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                       <h3 class="u-text u-text-default u-text-white u-text-4">
                         <span style="font-weight: 700;">Бонус Команди и Други</span>
                       </h3>
-                      <p class="u-text u-text-white u-text-5">Някои от нашите бонус команди са със +setup да имате информация за каналите да можете да следите вашите покани със +invites @потребител и оплакване при бъг може да откриете повече като тествате нашият бот. </p>
+                      <p class="u-text u-text-white u-text-5">Със някои от нашите бонус команди можете да имате информация за каналите да можете да следите вашите покани със +invites @потребител и оплакване при бъг може да откриете повече като тествате нашият бот. </p>
                     </div>
                   </div>
                 </div>
