--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   <h3 class="u-text u-text-default u-text-white u-text-10">
                     <span style="font-weight: 700;"></span>Автоматична Настройка<span style="font-weight: 700;"></span>
                   </h3>
-                  <p class="u-text u-text-white u-text-11">Със моята команда +config можете да си настройвате дискорд сървъра със Logs , Giveaways , AutoRole , Welcomer и други.</p>
+                  <p class="u-text u-text-white u-text-11">Със моята команда +help config можете да си настройвате дискорд сървъра със Logs , Giveaways , AutoRole , Welcomer и други.</p>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-radius-10 u-shape-round u-size-30 u-layout-cell-6">
