--- a/invite/index.html
+++ b/invite/index.html
@@ -5,7 +5,7 @@
 <body onload="HomePage()">
     <script>
         HomePage = () => {
-            window.location.href = "https://discord.com/api/oauth2/authorize?client_id=865130927850782741&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.scorpion-bot.com&response_type="
+            window.location.href = "https://discord.com/oauth2/authorize?client_id=865130927850782741&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.scorpion-bot.com&response_type=code&scope=identify%20email%20bot"
         }
     </script>
 </body>
